{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 45,
  "lineage": "8dd76878-f99c-e198-976c-3d1617695791",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ec2_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-084a1f44a13216e63",
            "association_id": "eipassoc-0d951a652d8af0f08",
            "domain": "vpc",
            "id": "eipalloc-084a1f44a13216e63",
            "instance": "i-06830f2a7f5b9e6f1",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-06b61985ccf560fba",
            "private_dns": "ip-20-0-1-178.ap-south-1.compute.internal",
            "private_ip": "20.0.1.178",
            "public_dns": "ec2-15-207-60-2.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.60.2",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CreatedBy": "Dhanwan",
              "CreationDate": "2022-11-14T09:55:15Z",
              "Type": "stag"
            },
            "tags_all": {
              "CreatedBy": "Dhanwan",
              "CreationDate": "2022-11-14T09:55:15Z",
              "Type": "stag"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_ami.ami",
            "data.aws_availability_zones.azs",
            "module.ec2-instance.aws_iam_instance_profile.this",
            "module.ec2-instance.aws_iam_role.this",
            "module.ec2-instance.aws_iam_role_policy_attachment.this",
            "module.ec2-instance.aws_instance.this",
            "module.ec2-instance.aws_spot_instance_request.this",
            "module.ec2-instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2-instance.data.aws_partition.current",
            "module.ec2-instance.data.aws_ssm_parameter.this",
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix",
            "module.vpc_dev.aws_cloudwatch_log_group.flow_log",
            "module.vpc_dev.aws_customer_gateway.this",
            "module.vpc_dev.aws_db_subnet_group.database",
            "module.vpc_dev.aws_default_network_acl.this",
            "module.vpc_dev.aws_default_route_table.default",
            "module.vpc_dev.aws_default_security_group.this",
            "module.vpc_dev.aws_default_vpc.this",
            "module.vpc_dev.aws_egress_only_internet_gateway.this",
            "module.vpc_dev.aws_eip.nat",
            "module.vpc_dev.aws_elasticache_subnet_group.elasticache",
            "module.vpc_dev.aws_flow_log.this",
            "module.vpc_dev.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc_dev.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc_dev.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc_dev.aws_internet_gateway.this",
            "module.vpc_dev.aws_nat_gateway.this",
            "module.vpc_dev.aws_network_acl.database",
            "module.vpc_dev.aws_network_acl.elasticache",
            "module.vpc_dev.aws_network_acl.intra",
            "module.vpc_dev.aws_network_acl.outpost",
            "module.vpc_dev.aws_network_acl.private",
            "module.vpc_dev.aws_network_acl.public",
            "module.vpc_dev.aws_network_acl.redshift",
            "module.vpc_dev.aws_network_acl_rule.database_inbound",
            "module.vpc_dev.aws_network_acl_rule.database_outbound",
            "module.vpc_dev.aws_network_acl_rule.elasticache_inbound",
            "module.vpc_dev.aws_network_acl_rule.elasticache_outbound",
            "module.vpc_dev.aws_network_acl_rule.intra_inbound",
            "module.vpc_dev.aws_network_acl_rule.intra_outbound",
            "module.vpc_dev.aws_network_acl_rule.outpost_inbound",
            "module.vpc_dev.aws_network_acl_rule.outpost_outbound",
            "module.vpc_dev.aws_network_acl_rule.private_inbound",
            "module.vpc_dev.aws_network_acl_rule.private_outbound",
            "module.vpc_dev.aws_network_acl_rule.public_inbound",
            "module.vpc_dev.aws_network_acl_rule.public_outbound",
            "module.vpc_dev.aws_network_acl_rule.redshift_inbound",
            "module.vpc_dev.aws_network_acl_rule.redshift_outbound",
            "module.vpc_dev.aws_redshift_subnet_group.redshift",
            "module.vpc_dev.aws_route.database_internet_gateway",
            "module.vpc_dev.aws_route.database_ipv6_egress",
            "module.vpc_dev.aws_route.database_nat_gateway",
            "module.vpc_dev.aws_route.private_ipv6_egress",
            "module.vpc_dev.aws_route.private_nat_gateway",
            "module.vpc_dev.aws_route.public_internet_gateway",
            "module.vpc_dev.aws_route.public_internet_gateway_ipv6",
            "module.vpc_dev.aws_route_table.database",
            "module.vpc_dev.aws_route_table.elasticache",
            "module.vpc_dev.aws_route_table.intra",
            "module.vpc_dev.aws_route_table.private",
            "module.vpc_dev.aws_route_table.public",
            "module.vpc_dev.aws_route_table.redshift",
            "module.vpc_dev.aws_route_table_association.database",
            "module.vpc_dev.aws_route_table_association.elasticache",
            "module.vpc_dev.aws_route_table_association.intra",
            "module.vpc_dev.aws_route_table_association.outpost",
            "module.vpc_dev.aws_route_table_association.private",
            "module.vpc_dev.aws_route_table_association.public",
            "module.vpc_dev.aws_route_table_association.redshift",
            "module.vpc_dev.aws_route_table_association.redshift_public",
            "module.vpc_dev.aws_subnet.database",
            "module.vpc_dev.aws_subnet.elasticache",
            "module.vpc_dev.aws_subnet.intra",
            "module.vpc_dev.aws_subnet.outpost",
            "module.vpc_dev.aws_subnet.private",
            "module.vpc_dev.aws_subnet.public",
            "module.vpc_dev.aws_subnet.redshift",
            "module.vpc_dev.aws_vpc.this",
            "module.vpc_dev.aws_vpc_dhcp_options.this",
            "module.vpc_dev.aws_vpc_dhcp_options_association.this",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_dev.aws_vpn_gateway.this",
            "module.vpc_dev.aws_vpn_gateway_attachment.this",
            "module.vpc_dev.aws_vpn_gateway_route_propagation.intra",
            "module.vpc_dev.aws_vpn_gateway_route_propagation.private",
            "module.vpc_dev.aws_vpn_gateway_route_propagation.public",
            "module.vpc_dev.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc_dev.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0331dade58b1ccc63",
            "arn": "arn:aws:ec2:ap-south-1:655180071464:instance/i-06830f2a7f5b9e6f1",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06830f2a7f5b9e6f1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06b61985ccf560fba",
            "private_dns": "ip-20-0-1-178.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "20.0.1.178",
            "public_dns": "ec2-13-235-99-110.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.99.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-south-1:655180071464:key/db1f1b4c-048c-4e8b-92e1-c2d4929b0fad",
                "throughput": 0,
                "volume_id": "vol-0043a246b75dc5fef",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bebf7b0b26f93eee",
            "tags": {
              "CreatedBy": "Dhanwan",
              "CreationDate": "2022-11-14T09:55:15Z",
              "Name": "web",
              "Type": "stag"
            },
            "tags_all": {
              "CreatedBy": "Dhanwan",
              "CreationDate": "2022-11-14T09:55:15Z",
              "Name": "web",
              "Type": "stag"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "web"
            },
            "vpc_security_group_ids": [
              "sg-0631d257a012a72db"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ami.ami",
            "data.aws_availability_zones.azs",
            "module.ec2-instance.aws_iam_instance_profile.this",
            "module.ec2-instance.data.aws_ssm_parameter.this",
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix",
            "module.vpc_dev.aws_subnet.public",
            "module.vpc_dev.aws_vpc.this",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:655180071464:security-group/sg-0631d257a012a72db",
            "description": "Security group for web-server with HTTP ports open within VPC",
            "egress": [],
            "id": "sg-0631d257a012a72db",
            "ingress": [],
            "name": "myzone-stag-sg-20221114095528052100000006",
            "name_prefix": "myzone-stag-sg-",
            "owner_id": "655180071464",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "Dhanwan",
              "CreationDate": "2022-11-14T09:55:15Z",
              "Name": "myzone-stag-sg",
              "Type": "stag"
            },
            "tags_all": {
              "CreatedBy": "Dhanwan",
              "CreationDate": "2022-11-14T09:55:15Z",
              "Name": "myzone-stag-sg",
              "Type": "stag"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-039346d60ed5a6261"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_dev.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-1526282096",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0631d257a012a72db",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix",
            "module.vpc_dev.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-3391115356",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0631d257a012a72db",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix",
            "module.vpc_dev.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b42ac91660194d26",
            "domain": "vpc",
            "id": "eipalloc-0b42ac91660194d26",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-235-193-114.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.193.114",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CreatedBy": "Dhanwan",
              "CreationDate": "2022-11-14T09:55:15Z",
              "Name": "myzone-stag-vpc-ap-south-1a",
              "Type": "stag"
            },
            "tags_all": {
              "CreatedBy": "Dhanwan",
              "CreationDate": "2022-11-14T09:55:15Z",
              "Name": "myzone-stag-vpc-ap-south-1a",
              "Type": "stag"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:655180071464:internet-gateway/igw-0819d4045b0f52fcc",
            "id": "igw-0819d4045b0f52fcc",
            "owner_id": "655180071464",
            "tags": {
              "CreatedBy": "Dhanwan",
              "CreationDate": "2022-11-14T09:55:15Z",
              "Name": "myzone-stag-vpc",
              "Type": "stag"
            },
            "tags_all": {
              "CreatedBy": "Dhanwan",
              "CreationDate": "2022-11-14T09:55:15Z",
              "Name": "myzone-stag-vpc",
              "Type": "stag"
            },
            "vpc_id": "vpc-039346d60ed5a6261"
          },
          "dependencies": [
            "module.vpc_dev.aws_vpc.this",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b42ac91660194d26",
            "connectivity_type": "public",
            "id": "nat-031767f97b451717d",
            "network_interface_id": "eni-081e3c856df1b0b85",
            "private_ip": "20.0.1.122",
            "public_ip": "13.235.193.114",
            "subnet_id": "subnet-0bebf7b0b26f93eee",
            "tags": {
              "CreatedBy": "Dhanwan",
              "CreationDate": "2022-11-14T09:55:15Z",
              "Name": "myzone-stag-vpc-ap-south-1a",
              "Type": "stag"
            },
            "tags_all": {
              "CreatedBy": "Dhanwan",
              "CreationDate": "2022-11-14T09:55:15Z",
              "Name": "myzone-stag-vpc-ap-south-1a",
              "Type": "stag"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_dev.aws_eip.nat",
            "module.vpc_dev.aws_internet_gateway.this",
            "module.vpc_dev.aws_subnet.public",
            "module.vpc_dev.aws_vpc.this",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09677403d42706d081080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-031767f97b451717d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09677403d42706d08",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_dev.aws_eip.nat",
            "module.vpc_dev.aws_internet_gateway.this",
            "module.vpc_dev.aws_nat_gateway.this",
            "module.vpc_dev.aws_route_table.private",
            "module.vpc_dev.aws_subnet.public",
            "module.vpc_dev.aws_vpc.this",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0819d4045b0f52fcc",
            "id": "r-rtb-06e0ad9e6d09b15d91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06e0ad9e6d09b15d9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_dev.aws_internet_gateway.this",
            "module.vpc_dev.aws_route_table.public",
            "module.vpc_dev.aws_vpc.this",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:655180071464:route-table/rtb-0ad4326a31521fff2",
            "id": "rtb-0ad4326a31521fff2",
            "owner_id": "655180071464",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "CreatedBy": "Dhanwan",
              "CreationDate": "2022-11-14T09:55:15Z",
              "Name": "myzone-stag-vpc-db",
              "Type": "stag"
            },
            "tags_all": {
              "CreatedBy": "Dhanwan",
              "CreationDate": "2022-11-14T09:55:15Z",
              "Name": "myzone-stag-vpc-db",
              "Type": "stag"
            },
            "timeouts": null,
            "vpc_id": "vpc-039346d60ed5a6261"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_dev.aws_vpc.this",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:655180071464:route-table/rtb-09677403d42706d08",
            "id": "rtb-09677403d42706d08",
            "owner_id": "655180071464",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "CreatedBy": "Dhanwan",
              "CreationDate": "2022-11-14T09:55:15Z",
              "Name": "myzone-stag-vpc-private",
              "Type": "stag"
            },
            "tags_all": {
              "CreatedBy": "Dhanwan",
              "CreationDate": "2022-11-14T09:55:15Z",
              "Name": "myzone-stag-vpc-private",
              "Type": "stag"
            },
            "timeouts": null,
            "vpc_id": "vpc-039346d60ed5a6261"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_dev.aws_vpc.this",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:655180071464:route-table/rtb-06e0ad9e6d09b15d9",
            "id": "rtb-06e0ad9e6d09b15d9",
            "owner_id": "655180071464",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "CreatedBy": "Dhanwan",
              "CreationDate": "2022-11-14T09:55:15Z",
              "Name": "myzone-stag-vpc-public",
              "Type": "stag"
            },
            "tags_all": {
              "CreatedBy": "Dhanwan",
              "CreationDate": "2022-11-14T09:55:15Z",
              "Name": "myzone-stag-vpc-public",
              "Type": "stag"
            },
            "timeouts": null,
            "vpc_id": "vpc-039346d60ed5a6261"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_dev.aws_vpc.this",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097f4e0f751cdc990",
            "route_table_id": "rtb-0ad4326a31521fff2",
            "subnet_id": "subnet-0b6c7ed5ca5069419"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_dev.aws_route_table.database",
            "module.vpc_dev.aws_route_table.private",
            "module.vpc_dev.aws_subnet.database",
            "module.vpc_dev.aws_vpc.this",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e54e1d243586b3d",
            "route_table_id": "rtb-0ad4326a31521fff2",
            "subnet_id": "subnet-019548955c6b6a154"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_dev.aws_route_table.database",
            "module.vpc_dev.aws_route_table.private",
            "module.vpc_dev.aws_subnet.database",
            "module.vpc_dev.aws_vpc.this",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007c784c78038c67c",
            "route_table_id": "rtb-0ad4326a31521fff2",
            "subnet_id": "subnet-0474be4cfa43c376f"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_dev.aws_route_table.database",
            "module.vpc_dev.aws_route_table.private",
            "module.vpc_dev.aws_subnet.database",
            "module.vpc_dev.aws_vpc.this",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c99675ab5870c628",
            "route_table_id": "rtb-09677403d42706d08",
            "subnet_id": "subnet-0b91c979ac08b3caa"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_dev.aws_route_table.private",
            "module.vpc_dev.aws_subnet.private",
            "module.vpc_dev.aws_vpc.this",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06579c50c0090bcc3",
            "route_table_id": "rtb-09677403d42706d08",
            "subnet_id": "subnet-014ec293e9c48fd0e"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_dev.aws_route_table.private",
            "module.vpc_dev.aws_subnet.private",
            "module.vpc_dev.aws_vpc.this",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbd484acab3ebadc",
            "route_table_id": "rtb-09677403d42706d08",
            "subnet_id": "subnet-076e480ee269170a5"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_dev.aws_route_table.private",
            "module.vpc_dev.aws_subnet.private",
            "module.vpc_dev.aws_vpc.this",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf07540d921b198c",
            "route_table_id": "rtb-06e0ad9e6d09b15d9",
            "subnet_id": "subnet-0bebf7b0b26f93eee"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_dev.aws_route_table.public",
            "module.vpc_dev.aws_subnet.public",
            "module.vpc_dev.aws_vpc.this",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009aa7eeba43ae746",
            "route_table_id": "rtb-06e0ad9e6d09b15d9",
            "subnet_id": "subnet-0bc429e07b965ebb5"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_dev.aws_route_table.public",
            "module.vpc_dev.aws_subnet.public",
            "module.vpc_dev.aws_vpc.this",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a9f411c364fc75d",
            "route_table_id": "rtb-06e0ad9e6d09b15d9",
            "subnet_id": "subnet-0aec1cbdeccbf88e5"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_dev.aws_route_table.public",
            "module.vpc_dev.aws_subnet.public",
            "module.vpc_dev.aws_vpc.this",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:655180071464:subnet/subnet-0b6c7ed5ca5069419",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "20.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6c7ed5ca5069419",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "655180071464",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Dhanwan",
              "CreationDate": "2022-11-14T09:55:15Z",
              "Name": "myzone-stag-vpc-db-ap-south-1a",
              "Type": "myzone-stag-db"
            },
            "tags_all": {
              "CreatedBy": "Dhanwan",
              "CreationDate": "2022-11-14T09:55:15Z",
              "Name": "myzone-stag-vpc-db-ap-south-1a",
              "Type": "myzone-stag-db"
            },
            "vpc_id": "vpc-039346d60ed5a6261"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_dev.aws_vpc.this",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:655180071464:subnet/subnet-019548955c6b6a154",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "20.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019548955c6b6a154",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "655180071464",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Dhanwan",
              "CreationDate": "2022-11-14T09:55:15Z",
              "Name": "myzone-stag-vpc-db-ap-south-1b",
              "Type": "myzone-stag-db"
            },
            "tags_all": {
              "CreatedBy": "Dhanwan",
              "CreationDate": "2022-11-14T09:55:15Z",
              "Name": "myzone-stag-vpc-db-ap-south-1b",
              "Type": "myzone-stag-db"
            },
            "vpc_id": "vpc-039346d60ed5a6261"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_dev.aws_vpc.this",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:655180071464:subnet/subnet-0474be4cfa43c376f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "20.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0474be4cfa43c376f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "655180071464",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Dhanwan",
              "CreationDate": "2022-11-14T09:55:15Z",
              "Name": "myzone-stag-vpc-db-ap-south-1c",
              "Type": "myzone-stag-db"
            },
            "tags_all": {
              "CreatedBy": "Dhanwan",
              "CreationDate": "2022-11-14T09:55:15Z",
              "Name": "myzone-stag-vpc-db-ap-south-1c",
              "Type": "myzone-stag-db"
            },
            "vpc_id": "vpc-039346d60ed5a6261"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_dev.aws_vpc.this",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:655180071464:subnet/subnet-0b91c979ac08b3caa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "20.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b91c979ac08b3caa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "655180071464",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Dhanwan",
              "CreationDate": "2022-11-14T09:55:15Z",
              "Name": "myzone-stag-vpc-private-ap-south-1a",
              "Type": "myzone-stag-private"
            },
            "tags_all": {
              "CreatedBy": "Dhanwan",
              "CreationDate": "2022-11-14T09:55:15Z",
              "Name": "myzone-stag-vpc-private-ap-south-1a",
              "Type": "myzone-stag-private"
            },
            "vpc_id": "vpc-039346d60ed5a6261"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_dev.aws_vpc.this",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:655180071464:subnet/subnet-014ec293e9c48fd0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "20.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014ec293e9c48fd0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "655180071464",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Dhanwan",
              "CreationDate": "2022-11-14T09:55:15Z",
              "Name": "myzone-stag-vpc-private-ap-south-1b",
              "Type": "myzone-stag-private"
            },
            "tags_all": {
              "CreatedBy": "Dhanwan",
              "CreationDate": "2022-11-14T09:55:15Z",
              "Name": "myzone-stag-vpc-private-ap-south-1b",
              "Type": "myzone-stag-private"
            },
            "vpc_id": "vpc-039346d60ed5a6261"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_dev.aws_vpc.this",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:655180071464:subnet/subnet-076e480ee269170a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "20.0.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076e480ee269170a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "655180071464",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Dhanwan",
              "CreationDate": "2022-11-14T09:55:15Z",
              "Name": "myzone-stag-vpc-private-ap-south-1c",
              "Type": "myzone-stag-private"
            },
            "tags_all": {
              "CreatedBy": "Dhanwan",
              "CreationDate": "2022-11-14T09:55:15Z",
              "Name": "myzone-stag-vpc-private-ap-south-1c",
              "Type": "myzone-stag-private"
            },
            "vpc_id": "vpc-039346d60ed5a6261"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_dev.aws_vpc.this",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:655180071464:subnet/subnet-0bebf7b0b26f93eee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "20.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bebf7b0b26f93eee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "655180071464",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Dhanwan",
              "CreationDate": "2022-11-14T09:55:15Z",
              "Name": "myzone-stag-vpc-public-ap-south-1a",
              "Type": "myzone-stag-public"
            },
            "tags_all": {
              "CreatedBy": "Dhanwan",
              "CreationDate": "2022-11-14T09:55:15Z",
              "Name": "myzone-stag-vpc-public-ap-south-1a",
              "Type": "myzone-stag-public"
            },
            "vpc_id": "vpc-039346d60ed5a6261"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_dev.aws_vpc.this",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:655180071464:subnet/subnet-0bc429e07b965ebb5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "20.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc429e07b965ebb5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "655180071464",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Dhanwan",
              "CreationDate": "2022-11-14T09:55:15Z",
              "Name": "myzone-stag-vpc-public-ap-south-1b",
              "Type": "myzone-stag-public"
            },
            "tags_all": {
              "CreatedBy": "Dhanwan",
              "CreationDate": "2022-11-14T09:55:15Z",
              "Name": "myzone-stag-vpc-public-ap-south-1b",
              "Type": "myzone-stag-public"
            },
            "vpc_id": "vpc-039346d60ed5a6261"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_dev.aws_vpc.this",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:655180071464:subnet/subnet-0aec1cbdeccbf88e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "20.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aec1cbdeccbf88e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "655180071464",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Dhanwan",
              "CreationDate": "2022-11-14T09:55:15Z",
              "Name": "myzone-stag-vpc-public-ap-south-1c",
              "Type": "myzone-stag-public"
            },
            "tags_all": {
              "CreatedBy": "Dhanwan",
              "CreationDate": "2022-11-14T09:55:15Z",
              "Name": "myzone-stag-vpc-public-ap-south-1c",
              "Type": "myzone-stag-public"
            },
            "vpc_id": "vpc-039346d60ed5a6261"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_dev.aws_vpc.this",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:655180071464:vpc/vpc-039346d60ed5a6261",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.0.0.0/16",
            "default_network_acl_id": "acl-0c6fb54fe3bc638ca",
            "default_route_table_id": "rtb-029de29039c725d25",
            "default_security_group_id": "sg-004dd54e88b703e27",
            "dhcp_options_id": "dopt-08f69bd270065dae8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-039346d60ed5a6261",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-029de29039c725d25",
            "owner_id": "655180071464",
            "tags": {
              "CreatedBy": "Dhanwan",
              "CreationDate": "2022-11-14T09:55:15Z",
              "Name": "myzone-stag-vpc",
              "Type": "stag"
            },
            "tags_all": {
              "CreatedBy": "Dhanwan",
              "CreationDate": "2022-11-14T09:55:15Z",
              "Name": "myzone-stag-vpc",
              "Type": "stag"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}